--- a/app/src/main/res/layout/new_course_layout.xml
+++ b/app/src/main/res/layout/new_course_layout.xml
@@ -11,7 +11,9 @@
         android:layout_height="48dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="AutoCompleteTextView"
+        android:backgroundTint="@android:color/transparent"
+        android:enabled="false"
+        android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -39,12 +41,22 @@
 
     <Button
         android:id="@+id/buttonDelete"
-        android:layout_width="103dp"
-        android:layout_height="106dp"
-        android:layout_marginStart="16dp"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:layout_marginStart="52dp"
         android:layout_marginTop="8dp"
-        android:text="Sil"
+        android:background="@drawable/delete"
         app:layout_constraintBottom_toBottomOf="@+id/spinnerNewNote"
         app:layout_constraintStart_toEndOf="@+id/etNewCourseName"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.4" />
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="3dp"
+        android:layout_marginTop="8dp"
+        android:background="@color/dark_yellow"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spinnerNewKredi"></View>
 </androidx.constraintlayout.widget.ConstraintLayout>
