--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -86,7 +86,7 @@
 
     <Button
         android:id="@+id/btnCalculate"
-        android:layout_width="wrap_content"
+        android:layout_width="197dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:background="@drawable/calculate_button"
