--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -23,8 +23,9 @@
         android:layout_width="256dp"
         android:layout_height="75dp"
         android:layout_marginBottom="132dp"
-        android:text="Button"
         android:background="@drawable/calculate_button"
+        android:text="Başla"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
